--- a/config/usr/share/nginx/html/50x.html
+++ b/config/usr/share/nginx/html/50x.html
@@ -1,25 +1,21 @@
-<!-- /usr/share/nginx/html/50x.html -->
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>Error</title>
   <style>
     body {
       width: 35em;
       margin: 0 auto;
-      font-family: Tahoma, Verdana, Arial, sans-serif;
+      color: #111;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+        "Segoe UI Symbol";
+      font-size: 16px;
+      line-height: 1.6;
     }
   </style>
 </head>
-
 <body>
-  <h1>An error occurred.</h1>
-  <p>Sorry, the page you are looking for is currently unavailable.<br />
-    Please try again later.</p>
-  <p>If you are the system administrator of this resource then you should check
-    the error log for details.</p>
-  <p><em>Faithfully yours, nginx.</em></p>
+  <h1>500</h1>
 </body>
-
 </html>
