Update default nginx pages

--- a/config/usr/share/nginx/html/index.html
+++ b/config/usr/share/nginx/html/index.html
@@ -1,29 +1,19 @@
-<!-- /usr/share/nginx/html/index.html -->
 <!DOCTYPE html>
 <html>
-
 <head>
-  <title>Welcome to nginx!</title>
+  <title>Waveorb Enabled.</title>
   <style>
     body {
-      width: 35em;
-      margin: 0 auto;
-      font-family: Tahoma, Verdana, Arial, sans-serif;
+      margin: 5em auto 0;
+      color: #111;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      text-align: center;
+      font-size: 200%;
     }
   </style>
 </head>
-
 <body>
-  <h1>Hello and welcome to nginx!</h1>
-  <p>If you see this page, the nginx web server is successfully installed and
-    working. Further configuration is required.</p>
-
-  <p>For online documentation and support please refer to
-    <a href="http://nginx.org/">nginx.org</a>.<br />
-    Commercial support is available at
-    <a href="http://nginx.com/">nginx.com</a>.</p>
-
-  <p><em>Thank you for using nginx.</em></p>
+  <h1>Waveorb Enabled.</h1>
+  <p>This server is running on <a href="https://waveorb.com">Waveorb.</a></p>
 </body>
-
 </html>
