--- a/config/usr/share/nginx/html/50x.html
+++ b/config/usr/share/nginx/html/50x.html
@@ -4,14 +4,11 @@
   <title>Error</title>
   <style>
     body {
-      width: 35em;
-      margin: 0 auto;
+      margin: 5em auto 0;
       color: #111;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-        "Segoe UI Symbol";
-      font-size: 16px;
-      line-height: 1.6;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      text-align: center;
+      font-size: 200%;
     }
   </style>
 </head>
