Futhark to default page

--- a/config/usr/share/nginx/html/index.html
+++ b/config/usr/share/nginx/html/index.html
@@ -15,5 +15,6 @@
 <body>
   <h1>Waveorb Enabled.</h1>
   <p>This server is running on <a href="https://waveorb.com">Waveorb.</a></p>
+  <p>ᚠᚢᚦᚬᚱᚴᚼᚾᛁᛅᛦᛋᛏᛒᛘᛚ</p>
 </body>
 </html>
