Update default nginx pages

--- a/config/usr/share/nginx/html/404.html
+++ b/config/usr/share/nginx/html/404.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <title>Error</title>
+  <title>404 Not Found</title>
   <style>
     body {
       margin: 5em auto 0;
@@ -13,10 +12,9 @@
     }
   </style>
 </head>
-
 <body>
   <h1>404</h1>
   <p>ᚠᚢᚦᚬᚱᚴᚼᚾᛁᛅᛦᛋᛏᛒᛘᛚ</p>
+  <p><a href="/">home</a></p>
 </body>
-
 </html>
