--- a/config/usr/share/nginx/html/50x.html
+++ b/config/usr/share/nginx/html/50x.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Error</title>
+  <title>500 Error</title>
   <style>
     body {
       margin: 5em auto 0;
@@ -15,5 +15,6 @@
 <body>
   <h1>500</h1>
   <p>ᚠᚢᚦᚬᚱᚴᚼᚾᛁᛅᛦᛋᛏᛒᛘᛚ</p>
+  <p><a href="/">home</a></p>
 </body>
 </html>
