--- a/config/usr/share/nginx/html/404.html
+++ b/config/usr/share/nginx/html/404.html
@@ -10,6 +10,14 @@
       text-align: center;
       font-size: 200%;
     }
+    a, a:visited, a:active {
+      text-decoration: none;
+      color: #44f;
+      font-size: 60%;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
