--- a/config/usr/share/nginx/html/50x.html
+++ b/config/usr/share/nginx/html/50x.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>500 Error</title>
   <style>
     body {
