--- a/config/html/404.html
+++ b/config/html/404.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>404 Not Found</title>
-  <style>
-    body {
-      margin: 5em auto 0;
-      color: #111;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-      text-align: center;
-      font-size: 200%;
-    }
-    a, a:visited, a:active {
-      text-decoration: none;
-      color: #44f;
-      font-size: 60%;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
-<body>
-  <h1>404</h1>
-  <p>ᚠᚢᚦᚬᚱᚴᚼᚾᛁᛅᛦᛋᛏᛒᛘᛚ</p>
-  <p><a href="/">home</a></p>
-</body>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>404 Not Found</title>
+    <style>
+      body {
+        margin: 5em auto 0;
+        color: #111;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+          'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
+          'Segoe UI Emoji', 'Segoe UI Symbol';
+        text-align: center;
+        font-size: 200%;
+      }
+      a,
+      a:visited,
+      a:active {
+        text-decoration: none;
+        color: #44f;
+        font-size: 60%;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>404</h1>
+    <p>ᚠᚢᚦᚬᚱᚴᚼᚾᛁᛅᛦᛋᛏᛒᛘᛚ</p>
+    <p><a href="/">home</a></p>
+  </body>
 </html>
