--- a/config/html/index.html
+++ b/config/html/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Waveorb Enabled.</title>
-  <style>
-    body {
-      margin: 5em auto 0;
-      color: #111;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-      text-align: center;
-      font-size: 125%;
-    }
-  </style>
-</head>
-<body>
-  <h1>Waveorb Enabled.</h1>
-  <p>This server is running on <a href="https://waveorb.com">Waveorb.</a></p>
-  <p>ᚠᚢᚦᚬᚱᚴᚼᚾᛁᛅᛦᛋᛏᛒᛘᛚ</p>
-</body>
+  <head>
+    <title>Waveorb Enabled.</title>
+    <style>
+      body {
+        margin: 5em auto 0;
+        color: #111;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+          'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
+          'Segoe UI Emoji', 'Segoe UI Symbol';
+        text-align: center;
+        font-size: 125%;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Waveorb Enabled.</h1>
+    <p>This server is running on <a href="https://waveorb.com">Waveorb.</a></p>
+    <p>ᚠᚢᚦᚬᚱᚴᚼᚾᛁᛅᛦᛋᛏᛒᛘᛚ</p>
+  </body>
 </html>
